kubernetes/apps/downloads/qbittorrent/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:4.6.5@sha256:6843a94d923e472f80a9505cfae77eb3689b2931f1fdf23358e459d3d0cdc9d0
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: samba-volume
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: samba-volume
          persistentVolumeClaim:
            claimName: samba-pvc
            namespace: home-media
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
